Fix: Use flutter create for platform support in CI, upgrade file_picker

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       
       - name: Build macOS
         run: |
-          flutter config --enable-macos-desktop
+          flutter create --platforms=macos .
           flutter pub get
           flutter build macos --release
 
